--- a/tasks/create-site.yaml
+++ b/tasks/create-site.yaml
@@ -7,18 +7,18 @@
   set_fact:
     duplicacy_command: "{{ duplicacy_remote_path }} init {{ site.init_commandline_args }}"
 
-- name: Create scripts dir
+- name: Create scripts directory
   file:
     name: "{{ DUPLICACY_SCRIPTS_DIR }}"
     state: directory
 
-- name: create-repository-init-script
+- name: Create repository init script
   template:
     src: duplicacy.site.template.sh
     dest: "{{ DUPLICACY_SCRIPTS_DIR }}/{{ site_name }}.init.sh"
     mode: "700"
 
-- name: init repository
+- name: Initialize the repository
   command: "{{ DUPLICACY_SCRIPTS_DIR }}/{{ site_name }}.init.sh"
   register: output
   # 100 means that site is alteady initialized
@@ -26,24 +26,24 @@
   changed_when: "output.rc != 100"
 
 
-- name: install filters
+- name: Install filters
   template:
     src: duplicacy.filters
     dest: "{{ site.directory }}/.duplicacy/filters"
     mode: "700"
 
 
-- name: Set command to init command
+- name: Set command to backup command
   set_fact:
     duplicacy_command: "nice -n 19 ionice -c 3{{ duplicacy_remote_path }} backup {{ site.update_commandline_args }}"
 
-- name: create update script
+- name: Create update script
   template:
     src: duplicacy.site.template.sh
     dest: "{{ DUPLICACY_SCRIPTS_DIR }}/{{ site_name }}.backup.sh"
     mode: "700"
 
-- name: install to cron
+- name: Schedule backup in cron
   cron:
     name: "duplicacy-{{ site_name }}"
     special_time: "{{site.cron_time}}"
