--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,7 +35,7 @@ DUPLICACY:
 # Specific snapshot ID's to create and maintain - these should be in your host_vars
 # DUPLICACY_SNAPSHOT:
 #   myhomedir:
-#     directory: /home/me
+#     root: /home/me
 #     filters: "{{ DUPLICACY_FILTERS }}"
 #     # Backup args can be empty
 #     backup_args: ""
